objects/ASI_MFM_CAP_FY_Budget_Ex_Rate__mdt.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Exchange_Rate_to_EUR__c</fullName>
        <label>Exchange Rate to EUR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY1920</fullName>
                    <default>true</default>
                    <label>FY1920</label>
                </value>
                <value>
                    <fullName>FY2021</fullName>
                </value>
                <value>
                    <fullName>FY2122</fullName>
                </value>
                <value>
                    <fullName>FY2223</fullName>
                </value>
                <value>
                    <fullName>FY2324</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Local_Currency__c</fullName>
        <label>Local Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>ASI MFM CAP FY Budget Ex Rate</label>
    <pluralLabel>ASI MFM CAP FY Budget Ex Rates</pluralLabel>
</CustomObject>